--- a/view/predlozak/head.phtml
+++ b/view/predlozak/head.phtml
@@ -1,4 +1,4 @@
-<meta charset="UTF-8">
+<meta charset="utf-8">
 <meta http-equiv="x-ua-compatible" content="ie=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title><?php echo APP::config('nazivAPP'); ?></title>
