--- a/view/privatno/istrazivac/index.phtml
+++ b/view/privatno/istrazivac/index.phtml
@@ -1,4 +1,4 @@
-<a class="success button expanded" href="#">Dodaj novog istrazivaca</a>
+<a class="success button expanded" href="/istrazivac/novi">Dodaj novog istrazivača</a>
 <ul style="list-style-type: none; font-size: 2em;">
     <?php 
     foreach($podaci as $red){
