--- a/view/privatno/istrazivac/listStavka.phtml
+++ b/view/privatno/istrazivac/listStavka.phtml
@@ -2,5 +2,5 @@
     <?php echo $red->ime . ' ' . $red->prezime ?> 
     &lt;<?php echo $red->email ?>&gt;
         <a href="/istrazivac/promjena?sifra=<?php echo $red->sifra ?>"><i title="Promjeni" class="fas fa-edit"></i></a> 
-        <a href="/istrazivac/obrisi?sifra=<?php echo $red->sifra ?>"><i title="Obriši" class="fas fa-trash" style="color: red;"></i></a>
+        <a onclick="return confirm('Sigurno obrisati <?php echo $red->ime . ' ' . $red->prezime ?> ');" href="/istrazivac/obrisi?sifra=<?php echo $red->sifra ?>"><i title="Obriši" class="fas fa-trash" style="color: red;"></i></a>
 </li>
