--- a/view/predlozak/izbornik.phtml
+++ b/view/predlozak/izbornik.phtml
@@ -21,26 +21,35 @@
                 <li>
                     <a href="/vrsta/index">Vrste</a>
                 </li>
-                <?php if($_SESSION['istrazivac']->uloga==='admin'):?>
-                    <li><a href="/istrazivac/index">Istrazivaci</a></li>
+                
+                <?php if(isset($_SESSION['istrazivac']) && $_SESSION['istrazivac']->uloga==='admin'):?>
+                    <li><a href="/istrazivac/index">Istraživači</a></li>
                 <?php else:?>
                     <li><a href="/nadzornaploca/profil">Profil</a></li>
                 <?php endif;?>
             <?php endif;?>
-            <li><a href="/index/onama">O nama</a></li>
+            <?php if(isset($_SESSION['istrazivac']) && $_SESSION['istrazivac']->uloga!=='admin'):?>
+                <li><a href="/index/onama">O nama</a></li>
+                <?php endif;?>
+                
         </ul>
     </div>
     <div class="top-bar-right">
         <ul class="menu">
-            <li>
-            <?php if(!isset($_SESSION['istrazivac'])): ?>
+
+        <?php if(!isset($_SESSION['istrazivac'])): ?>
+                <li>
                 <a href="/index/prijava">Prijava</a>
+                </li>
+                
             <?php else:?>
+                <li>
                 <a href="/index/odjava">Odjavi 
                 <?php echo $_SESSION['istrazivac']->ime . 
                 ' ' . $_SESSION['istrazivac']->prezime; ?></a>
+                </li>
             <?php endif;?>
-            </li>
+
         </ul>
     </div>
 </div>
