--- a/view/privatno/vrsta/index.phtml
+++ b/view/privatno/vrsta/index.phtml
@@ -3,10 +3,11 @@
 <table>
     <thead>
         <tr>
-            <th>Ime</th>
+            <th>Znanstveni naziv</th>
             <th>Kategorija</th>
-            <th>istrazivac</th>
-            <th>Ugrozenost</th>
+            <th>Istraživač</th>
+            <th>Ugroženost</th>
+            <th>Akcija</th>
         </tr>
     </thead>
     <tbody>
