--- a/view/predlozak/izbornik.phtml
+++ b/view/predlozak/izbornik.phtml
@@ -41,9 +41,10 @@
                 <li>
                 <a href="/index/prijava">Prijava</a>
                 </li>
-
+                <li>
+                <a href="/index/gost">Gost</a>
+                </li>
             <?php else:?>
-                
                 <li>
                 <a href="/index/odjava">Odjavi 
                 <?php echo $_SESSION['istrazivac']->ime . 
