--- a/view/privatno/vrsta/novi.phtml
+++ b/view/privatno/vrsta/novi.phtml
@@ -16,12 +16,17 @@ action="/vrsta/dodajnovi">
     <input type="text" id="ugrozenost" name="ugrozenost" value="">
   </label>
 
+
+
+
   <div class="grid-x grid-margin-x">
     <div class="large-6 cell">
-      <a href="/vrsta/index" class="alert button expanded">Odustani</a>
+      <a href="/vrsta/index" 
+      class="alert button expanded">Odustani</a>
     </div>
     <div class="large-6 cell">
-      <input type="submit" class="button expanded" value="Dodaj vrstu"></input>
+      <input type="submit" class="button expanded" 
+      value="Dodaj vrstu"></input>
     </div>
   </div>
 </form>
