--- a/view/privatno/vrsta/index.phtml
+++ b/view/privatno/vrsta/index.phtml
@@ -25,7 +25,7 @@
         ?>
 </div>
 <nav>
-    <ul class="pagination text-center">
+    <ul class="pagination text-left">
         <li class="pagination-previous">
             <a href="trazi?uvjet=<?php echo $uvjet ?>&stranica=<?php echo $stranica-1 ?>">
             Prethodni</a>
