--- a/view/predlozak/izbornik.phtml
+++ b/view/predlozak/izbornik.phtml
@@ -42,7 +42,7 @@
                 <a href="/index/prijava">Prijava</a>
                 </li>
                 <li>
-                <a href="/index/gost">Gost</a>
+                <a href="/index/registracija">Registracija</a>
                 </li>
             <?php else:?>
                 <li>
