--- a/view/privatno/vrsta/promjena.phtml
+++ b/view/privatno/vrsta/promjena.phtml
@@ -39,6 +39,6 @@ action="/vrsta/promjeni">
     </div>
   </div>
   <input type="hidden" name="sifra" 
-  value="<?php echo $polaznik->sifra ?>">
+  value="<?php echo $vrsta->sifra ?>">
 </form>
 <?php echo $poruka; ?>
