--- a/view/registracija.phtml
+++ b/view/registracija.phtml
@@ -26,6 +26,12 @@ action="/index/registrirajnovi">
     ?>">
   </label>
 
+  <label for="uloga">Uloga</label>
+  <select name="uloga" id="uloga">
+    <option value="istrazivac">Istraživač</option>
+    <option value="admin">Administrator</option>
+  </select>
+
   <input type="submit" class="button expanded" value="Registriraj se"></input>
   
 </form>
