--- a/view/privatno/vrsta/stavka.phtml
+++ b/view/privatno/vrsta/stavka.phtml
@@ -6,7 +6,7 @@
         <?php echo $red->ugrozenost ?>
         <br />
         <hr />
-        <a href="/polaznik/promjena?sifra=<?php echo $red->sifra ?>">
+        <a href="/vrsta/promjena?sifra=<?php echo $red->sifra ?>">
         <i title="Promjeni" class="fas fa-edit fa-2x"></i></a> 
         
         <?php if($red->ukupno==0): ?>
