--- a/view/predlozak/izbornik.phtml
+++ b/view/predlozak/izbornik.phtml
@@ -15,7 +15,7 @@
                 <li>
                     <a href="#">Projekti</a>
                     <ul class="vertical menu">
-                        <li><a href="#">Vrsta/Istrazivac</a></li>
+                        <li><a href="#">Projekt/Istrazivac</a></li>
                     </ul>
                 </li>
                 <li>
