--- a/view/privatno/vrsta/promjena.phtml
+++ b/view/privatno/vrsta/promjena.phtml
@@ -1,7 +1,8 @@
 <form class="log-in-form" method="POST"
 action="/vrsta/promjeni">
  <label>Ime
-    <input type="text" id="ime" name="ime" value="<?php 
+    <input type="text" id="ime" name="ime" 
+    value="<?php 
     echo $vrsta->ime;
     ?>">
   </label>
@@ -21,7 +22,8 @@ action="/vrsta/promjeni">
   </label>
 
   <label>Ugroženost
-    <input type="text" id="ugrozenost" name="ugrozenost" value="<?php 
+    <input type="text" id="ugrozenost" name="ugrozenost" 
+    value="<?php 
     echo $vrsta->ugrozenost;
     ?>">
   </label>
