--- a/view/privatno/vrsta/stavka.phtml
+++ b/view/privatno/vrsta/stavka.phtml
@@ -9,16 +9,10 @@
         <a href="/vrsta/promjena?sifra=<?php echo $red->sifra ?>">
         <i title="Promjeni" class="fas fa-edit fa-2x"></i></a> 
         
-        <?php if($red->ukupno==0): ?>
-        <a onclick="return confirm('Sigurno obrisati 
-        <?php echo $red->ime ?> '); " 
+        <a onclick="return confirm('Sigurno obrisati <?php echo $red->ime ?> '); " 
         href="/vrsta/obrisi?sifra=<?php echo $red->sifra ?>">
         <i title="Obriši" class="fas fa-trash fa-2x" style="color: red;"></i></a>
-        <?php else:?>
-
-        <i title="Ne može se obrisati jer je vrsta član jednog ili više projekata" class="fas fa-trash fa-2x" style="color: gray;"></i>
-
-        <?php endif;?>
+        
 
 
     </div>
