--- a/view/privatno/projekt/red.phtml
+++ b/view/privatno/projekt/red.phtml
@@ -11,12 +11,10 @@
         <a href="/projekt/promjena?sifra=<?php echo $red->sifra?>"><i title="Promjeni" class="fas fa-edit fa-2x"></i></a> 
         <?php if($red->ukupnovrsta==0): ?>
 
-        <i id="g_<?php echo $red->sifra?>" 
-        title="Obriši" class="fas fa-trash fa-2x" 
-        style="color: red; cursor: pointer;"></i>
+        <a href="/projekt/obrisi?sifra=<?php echo $red->sifra?>"><i title="Obriši" class="fas fa-trash fa-2x" style="color: red; cursor: pointer;"></i></a>
 
         <?php else: ?>
-            <i id="g_0" title="Ne može se obrisati jer ima vrste" 
+            <i title="Ne može se obrisati jer ima vrste" 
             class="fas fa-trash fa-2x" 
             style="color: gray;"></i>
         <?php endif; ?>
