--- a/view/privatno/projekt/index.phtml
+++ b/view/privatno/projekt/index.phtml
@@ -12,7 +12,7 @@
         </div>
         <div class="large-9 cell" style="padding-left: 5px;">
             <input type="submit" class="success button expanded"
-            value="Dodaj novu vrstu na odabranog istraživača"
+            value="Dodaj nove vrste na odabranog istraživača"
             style="border: 0px;">
         </div>
     </div>
@@ -22,7 +22,8 @@
 <table>
     <thead>
         <tr>
-            <th>Ime</th>
+            <th>Naziv</th>
+            <th>Istraživač</th>
             <th>Vrste</th>
             <th>Akcija</th>
         </tr>
