--- a/view/privatno/vrsta/novi.phtml
+++ b/view/privatno/vrsta/novi.phtml
@@ -1,3 +1,6 @@
+<div class="grid-x grid-margin-x">
+    <div class="large-12 cell">
+
 <form class="log-in-form" method="POST"
 action="/vrsta/dodajnovi">
  <label>Ime
@@ -8,35 +11,13 @@ action="/vrsta/dodajnovi">
     <input type="text" id="kategorija" name="kategorija" value="">
   </label>
 
-  <label for="istrazivac">Istraživač</label>
-      <select name="istrazivac" id="istrazivac">
-          <option value="0">Odaberite istrazivača</option>
-          <?php foreach($istrazivaci as $istrazivac): ?>
-              <option <?php 
-                   if($istrazivac->sifra==$projekt->istrazivac){
-                       echo 'selected="selected"';
-                  }
-                  
-                   ?> value="<?php echo $istrazivac->sifra ?>">
-                  <?php echo $istrazivac->ime . ' ' . $istrazivac->prezime ?>
-              </option>
-          <?php endforeach;?>
-      </select>
+  <label>Istraživač
+    <input type="text" id="istrazivac" name="istrazivac" value="">
+  </label>
 
-      <label for="ugrozenost">Ugroženost</label>
-      <select name="ugrozenost" id="ugrozenost">
-          <option value="0">Odaberite ugroženost</option>
-          <?php foreach($ugrozenosti as $ugrozenost): ?>
-              <option <?php 
-                   if($ugrozenost->sifra==$projekt->ugrozenost){
-                       echo 'selected="selected"';
-                  }
-                  
-                   ?> value="<?php echo $ugrozenost->sifra ?>">
-                  <?php echo $ugrozenost->šifra ?>
-              </option>
-          <?php endforeach;?>
-      </select>
+  <label>Ugroženost
+    <input type="text" id="ugrozenost" name="ugrozenost" value="">
+  </label>
 
 
 
@@ -52,4 +33,6 @@ action="/vrsta/dodajnovi">
     </div>
   </div>
 </form>
+</div>
+</div>
 <?php echo $poruka; ?>
