--- a/view/privatno/projekt/detalji.phtml
+++ b/view/privatno/projekt/detalji.phtml
@@ -14,7 +14,7 @@
 
             <label for="istrazivac">Odabrani istraživač</label>
             <select name="istrazivac" id="istrazivac">
-                <option value="0">Odaberite istraživača</option>
+                <option value="0">Odaberite istraživače</option>
                 <?php foreach($istrazivaci as $istrazivac): ?>
                     <option <?php 
                         if($istrazivac->sifra==$projekt->istrazivac){
