--- a/view/predlozak/izbornik.phtml
+++ b/view/predlozak/izbornik.phtml
@@ -14,7 +14,7 @@
             <li><a href="/nadzornaploca/index">Nadzorna ploča</a></li>
                 
             <li>
-            <a href="projekt/index">Projekti</a> 
+            <a href="/projekt/index">Projekti</a> 
             </li>
                 
                 <li>
