--- a/view/privatno/projekt/novi.phtml
+++ b/view/privatno/projekt/novi.phtml
@@ -18,7 +18,7 @@ action="/projekt/dodajnovi">
   <label>Vrsta
             <select name="vrsta" id="vrsta">
                 <option value="0">Odaberite vrstu</option>
-                <?php foreach($vrste as $vrstavrsta): ?>
+                <?php foreach($vrste as $vrsta): ?>
                     <option value="<?php echo $vrsta->sifra ?>">
                         <?php echo $vrsta->ime ?>
                     </option>
