--- a/view/privatno/projekt/promjena.phtml
+++ b/view/privatno/projekt/promjena.phtml
@@ -20,7 +20,7 @@ action="/projekt/promjeni">
   <label>Vrsta
             <select name="vrsta" id="vrsta">
                 <option value="0">Odaberite vrstu</option>
-                <?php foreach($vrste as $vrstavrsta): ?>
+                <?php foreach($vrste as $vrsta): ?>
                     <option value="<?php echo $vrsta->sifra ?>">
                         <?php echo $vrsta->ime ?>
                     </option>
