--- a/view/privatno/vrsta/novi.phtml
+++ b/view/privatno/vrsta/novi.phtml
@@ -15,12 +15,7 @@ action="/vrsta/dodajnovi">
             <select name="istrazivac" id="istrazivac">
                 <option value="0">Odaberite istraživače</option>
                 <?php foreach($istrazivaci as $istrazivac): ?>
-                    <option <?php 
-                        if($istrazivac->sifra==$vrsta->istrazivac){
-                            echo 'selected="selected"';
-                        }
-                        
-                        ?> value="<?php echo $istrazivac->sifra ?>">
+                    <option value="<?php echo $istrazivac->sifra ?>">
                         <?php echo $istrazivac->ime . ' ' . $istrazivac->prezime ?>
                     </option>
                 <?php endforeach;?>
