--- a/view/pocetna.phtml
+++ b/view/pocetna.phtml
@@ -1,4 +1,3 @@
-Iz pocetna.phtml <br />
-    <?php 
-        echo $p . ' - ' . $k;
-     ?>
+Dobrodošli
+<br>
+<img src="https://image.winudf.com/v2/image/Y29tLk1vYmlsZVN0cmFuZ2VyLmFwcDAwNDZfc2NyZWVuXzRfMTUxNDY4MDQ4NV8wODQ/screen-4.jpg?fakeurl=1&type=.jpg" alt="">
