--- a/view/privatno/projekt/index.phtml
+++ b/view/privatno/projekt/index.phtml
@@ -5,7 +5,7 @@
         <tr>
             <th>Naziv</th>
             <th>Istraživač</th>
-            <th>Vrste</th>
+            <th>Vrsta</th>
             <th>Akcija</th>
         </tr>
     </thead>
