--- a/view/predlozak/izbornik.phtml
+++ b/view/predlozak/izbornik.phtml
@@ -25,7 +25,7 @@
                 <?php if(isset($_SESSION['istrazivac']) && $_SESSION['istrazivac']->uloga==='admin'):?>
                     <li><a href="/istrazivac/index">Istraživači</a></li>
                 <?php else:?>
-                    <li><a href="/nadzornaploca/profil">Profil</a></li>
+                    <li><a href="/index/profil">Profil</a></li>
                 <?php endif;?>
                 <li><a href="/index/era">ERA</a></li>
             <?php endif;?>
