--- a/view/onama.phtml
+++ b/view/onama.phtml
@@ -1,2 +1,2 @@
-Mi smo grupa entuzijasta koji se bave zaštitom ugroženih vrsta sisavaca
+Mi smo grupa entuzijasta koji se bave istraživanjima i zaštitom ugroženih vrsta sisavaca
 <img src="https://dnlzsmybcpo0z.cloudfront.net/games/images/map_img_824924_1498152552.jpg" alt="">
